Web.config connection string change - to Chemo DB

--- a/Ready!/AspNetUI/Web.config
+++ b/Ready!/AspNetUI/Web.config
@@ -60,20 +60,11 @@
 	</appSettings>
 
 	<connectionStrings>
-		<!--Possimus IT office-->
-    <add name="GEM2Operational_MSSQL" connectionString="Data Source=pantera;Initial Catalog=ReadyDev;User ID=sa;Password=Poss-Plus!" providerName="System.Data.SqlClient" />
-    <add name="SSI_Default" connectionString="Data Source=pantera;Initial Catalog=SSI;User ID=sa;Password=Poss-Plus!" providerName="System.Data.SqlClient" />
-    <add name="Ready_poss_wc" connectionString="Data Source=pantera;Initial Catalog=ReadyDev;User ID=sa;Password=Poss-Plus!" providerName="System.Data.SqlClient" />
     
-		<!--Possimus IT pantera-->
-		<!--<add name="GEM2Operational_MSSQL" connectionString="Data Source=pantera;Initial Catalog=ReadyDev;User ID=sa;Password=Poss-Plus!" providerName="System.Data.SqlClient" />
-    <add name="SSI_Default" connectionString="Data Source=pantera;Initial Catalog=SSI;User ID=sa;Password=Poss-Plus!" providerName="System.Data.SqlClient" />
-    <add name="Ready_poss_wc" connectionString="Data Source=pantera;Initial Catalog=ReadyDev;User ID=sa;Password=Poss-Plus!" providerName="System.Data.SqlClient" />-->
-
-		<!--Nanokinetik development-->
-		<!--<add name="GEM2Operational_MSSQL" connectionString="Data Source=178.218.174.14;Initial Catalog=Ready_poss_wc;User ID=sa;Password=P0ss1T" providerName="System.Data.SqlClient" />
-		<add name="SSI_Default" connectionString="Data Source=178.218.174.14;Initial Catalog=SSI;User ID=sa;Password=P0ss1T" providerName="System.Data.SqlClient" />
-		<add name="Ready_poss_wc" connectionString="Data Source=178.218.174.14;Initial Catalog=Ready_poss_wc;User ID=sa;Password=P0ss1T" providerName="System.Data.SqlClient" />-->
+    <add name="GEM2Operational_MSSQL" connectionString="Data Source=localhost;Initial Catalog=Chemo;User ID=DevUser;Password=DevPassword" providerName="System.Data.SqlClient" />
+    <add name="SSI_Default" connectionString="Data Source=localhost;Initial Catalog=SSI;User ID=DevUser;Password=DevPassword" providerName="System.Data.SqlClient" />
+    <add name="Ready_poss_wc" connectionString="Data Source=localhost;Initial Catalog=Chemo;User ID=DevUser;Password=DevPassword" providerName="System.Data.SqlClient" />
+    
 	</connectionStrings>
 
   <mailSettings>
