Change web config and minor project file change

--- a/Ready!/AspNetUI/AspNetUI.csproj
+++ b/Ready!/AspNetUI/AspNetUI.csproj
@@ -2151,6 +2151,7 @@
     <Folder Include="AttachTmpDir\" />
     <Folder Include="Documents\" />
     <Folder Include="Model\" />
+    <Folder Include="Views\CV Import\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AspNetUIFramework\AspNetUIFramework.csproj">
