--- a/Ready!/AspNetUI/Web.config
+++ b/Ready!/AspNetUI/Web.config
@@ -61,9 +61,9 @@
 
 	<connectionStrings>
     
-    <add name="GEM2Operational_MSSQL" connectionString="Data Source=localhost;Initial Catalog=Ready;User ID=DevUser;Password=DevPassword" providerName="System.Data.SqlClient" />
+    <add name="GEM2Operational_MSSQL" connectionString="Data Source=localhost;Initial Catalog=Chemo;User ID=DevUser;Password=DevPassword" providerName="System.Data.SqlClient" />
     <add name="SSI_Default" connectionString="Data Source=localhost;Initial Catalog=SSI;User ID=DevUser;Password=DevPassword" providerName="System.Data.SqlClient" />
-    <add name="Ready_poss_wc" connectionString="Data Source=localhost;Initial Catalog=Ready;User ID=DevUser;Password=DevPassword" providerName="System.Data.SqlClient" />
+    <add name="Ready_poss_wc" connectionString="Data Source=localhost;Initial Catalog=Chemo;User ID=DevUser;Password=DevPassword" providerName="System.Data.SqlClient" />
     
 	</connectionStrings>
 
