--- a/Ready!/AspNetUI/AspNetUI.csproj
+++ b/Ready!/AspNetUI/AspNetUI.csproj
@@ -101,6 +101,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="WindowsBase" />
     <Reference Include="Xml.Schema.Linq, Version=2.0.2.56002, Culture=neutral, PublicKeyToken=47d0c84d0ebb13e5, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Library\Xml.Schema.Linq.dll</HintPath>
